Implement CRUD WordMapping and WordMappingSynonym

--- a/app/assets/stylesheets/modules/margin.scss
+++ b/app/assets/stylesheets/modules/margin.scss
@@ -2,6 +2,10 @@
   margin-bottom: 8px !important;
 }
 
+.margin-bottom-32 {
+  margin-bottom: 32px !important;
+}
+
 .margin-top-50 {
   margin-top: 50px;
 }
