--- a/app/assets/stylesheets/modules/dict.scss
+++ b/app/assets/stylesheets/modules/dict.scss
@@ -36,6 +36,14 @@
   font-size: 14px !important;
 }
 
+%base-dict-delete-button {
+  position: absolute;
+  bottom: 100%;
+  right: 21px;
+  background-color: #fff;
+  font-size: 13px;
+}
+
 .dict {
   padding-bottom: 32px;
   margin-bottom: 32px;
@@ -57,6 +65,7 @@
   }
 
   &__title {
+    display: inline-block;
     position: relative;
     margin-bottom: 16px;
     font-size: 24px;
@@ -72,6 +81,10 @@
     button {
       @extend %base-dict-button;
       display: none;
+    }
+
+    .delete-button {
+      @extend %base-dict-delete-button
     }
   }
 
@@ -124,11 +137,7 @@
       @extend %base-dict-button;
 
       &.delete-button {
-        position: absolute;
-        bottom: 100%;
-        right: 21px;
-        background-color: #fff;
-        font-size: 13px;
+        @extend %base-dict-delete-button;
       }
     }
   }
