--- a/app/views/word_mappings/index.html.slim
+++ b/app/views/word_mappings/index.html.slim
@@ -2,6 +2,37 @@
   = render 'shared/pagination', resources: @word_mappings, per_page: @per_page
 
 = render layout: 'bots/layout' do
+  css:
+    .placeholder-box {
+      height: 38px;
+      background-color: #ccc;
+    }
+    .placeholder-box--sm {
+      height: 20px;
+      background-color: #ccc;
+    }
+
+  span(
+    data-component="WordMappings"
+    data-form-action-url=bot_word_mappings_path(@bot)
+    data-bot-id=@bot.id
+    data-word-mappings=ActiveModelSerializers::SerializableResource.new(@word_mappings).to_json
+  )
+    .well.clearfix
+      .pull-left
+        .placeholder-box style="width: 200px"
+      .pull-right.text-right
+        .placeholder-box style="width: 130px"
+
+    - 10.times do
+      .dict
+        .dict__title
+          .placeholder-box style="width: 130px"
+        .dict__subtitle
+          .placeholder-box--sm style="width: 98px;"
+        ul.dict__words
+          - 3.times do
+            li: .placeholder-box style="width: 60px"
 
   - if @word_mappings.blank? && params[:keyword].blank?
     .card: .card-block.text-center
@@ -19,24 +50,4 @@
             = material_icon 'close', class: 'mi-xs'
             span 検索を解除
 
-      = link_to '新規登録', new_bot_word_mapping_path(@bot), class: 'btn btn-success'
-    = pagination
-    table.table.table-striped
-      thead
-        tr
-          th= WordMapping.human_attribute_name(:word)
-          th= WordMapping.human_attribute_name(:synonym)
-          th
-      tbody
-        - @word_mappings.each do |word_mapping|
-          tr
-            td= highlight(word_mapping.word, params[:keyword])
-            td 
-              - word_mapping.word_mapping_synonyms.each do |wms|
-                = wms.value
-                br
-            td.text-right
-              = link_to '編集', edit_bot_word_mapping_path(@bot, word_mapping), class: 'btn btn-secondary btn-sm', data: { event: 'update synonym' }
-              = space 2
-              = link_to '削除', bot_word_mapping_path(@bot, word_mapping), class: 'btn btn-danger btn-sm', data: { confirm: '削除します。よろしいですか？', method: :delete, event: 'delete synonym' }
-    = pagination
+= paginate @word_mappings
