--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -5,6 +5,6 @@
       = f.label :email
       = f.email_field :email, autofocus: true, class: "form-control"
 
-    = f.submit '再設定URLを受取る', class: "btn btn-success btn-block"
-    = link_to new_user_session_path, class: 'btn btn-link btn-block' do
+    = f.submit '再設定URLを受取る', class: "btn btn-success btn-block", data: { event: 'send re-set password' }
+    = link_to new_user_session_path, class: 'btn btn-link btn-block', data: { event: 'return to login home' } do
       small ログインページへ
