--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -6,7 +6,7 @@
         = space
         = @bot.name
         = space 2
-        = link_to new_chats_path(@bot.token), class: 'btn btn-outline-success btn-sm', target: '_blank' do
+        = link_to new_chats_path(@bot.token), class: 'btn btn-outline-success btn-sm', target: '_blank', data: { event: 'go to chat' } do
           = material_icon 'chat', class: 'mi-xs'
           = space
           span チャットする
@@ -21,7 +21,7 @@
           = space
           span 学習を実行
         = space 2
-        = active_link_to bot_settings_bot_path(@bot), class: 'btn btn-outline-gray btn-sm', active: :exact do
+        = active_link_to bot_settings_bot_path(@bot), class: 'btn btn-outline-gray btn-sm', active: :exact, data: { event: 'Settings' } do
           = material_icon 'settings', class: 'mi-xs'
           = space
           span 設定
@@ -30,33 +30,33 @@
     .container
       ul.d-flex.justify-content-start
         li.nav-item
-          = active_link_to bot_path(@bot), class: 'nav-link', active: :exact do
+          = active_link_to bot_path(@bot), class: 'nav-link', active: :exact, data: { event: 'Dashboard' } do
             = material_icon 'dashboard', class: 'text-gray-light mi-sm'
             = space
             span ダッシュボード
         li class="nav-item"
-          = active_link_to bot_imports_path(@bot), class: "nav-link #{'active' if request.path == bot_exports_path(@bot)}", active: :exact do
+          = active_link_to bot_imports_path(@bot), class: "nav-link #{'active' if request.path == bot_exports_path(@bot)}", active: :exact, data: { event: 'learning data' } do
             = material_icon 'view_list', class: 'text-gray-light mi-sm'
             = space
             span 学習データ
         li class="nav-item"
           = active_link_to bot_question_answers_path(@bot), class: 'nav-link',
-            active: /^\/bots\/[0-9]+\/(question_answers|topic_tags)/ do
+            active: /^\/bots\/[0-9]+\/(question_answers|topic_tags)/, data: { event: 'Q&A' } do
             = material_icon 'question_answer', class: 'text-gray-light mi-sm'
             = space
             span Q&A
         li class="nav-item"
-          = active_link_to bot_conversation_tree_path(@bot), class: 'nav-link', active: :exact do
+          = active_link_to bot_conversation_tree_path(@bot), class: 'nav-link', active: :exact, data: { event: 'tree' } do
             = material_icon 'clear_all', class: 'text-gray-light mi-sm flip-horizontal'
             = space
             span 会話ツリー
         li class="nav-item"
-          = active_link_to bot_threads_path(@bot), class: 'nav-link' do
+          = active_link_to bot_threads_path(@bot), class: 'nav-link', data: { event: 'chat log' } do
             = material_icon 'history', class: 'text-gray-light mi-sm'
             = space
             span 対話履歴
         li class="nav-item"
-          = active_link_to bot_tasks_path(@bot), class: 'nav-link' do
+          = active_link_to bot_tasks_path(@bot), class: 'nav-link', data: { event: 'task' } do
             = material_icon 'playlist_add_check', class: 'text-gray-light mi-sm'
             = space
             span 対話タスク
@@ -67,11 +67,11 @@
           a class=("nav-link dropdown-toggle #{active_other}") href="#" data-toggle="dropdown" role="button"
             span その他
           .dropdown-menu.dropdown-menu-right
-            = active_link_to bot_word_mappings_path(@bot), class: 'dropdown-item' do
+            = active_link_to bot_word_mappings_path(@bot), class: 'dropdown-item', data: { event: 'synonym' } do
               = material_icon 'book', class: 'text-gray-light mi-sm'
               = space
               span 同義語
-            = active_link_to new_bot_chat_test_path(@bot), class: 'dropdown-item' do
+            = active_link_to new_bot_chat_test_path(@bot), class: 'dropdown-item', data: { event: 'bot test' } do
               = material_icon 'done_all', class: 'text-gray-light mi-sm'
               = space
               span ボットテスト
