--- a/app/views/chat_tests/new.html.slim
+++ b/app/views/chat_tests/new.html.slim
@@ -11,9 +11,9 @@
         = file_field_tag :file, label: "CSVファイル", class: 'form-control'
 
       .form-group.text-center
-        = submit_tag 'Shift_JISでアップロード', class: 'btn btn-success'
+        = submit_tag 'Shift_JISでアップロード', class: 'btn btn-success', data: { event: 'upload with shift_JIS' }
         = space 2
-        = submit_tag 'UTF-8でアップロード', class: 'btn btn-success'
+        = submit_tag 'UTF-8でアップロード', class: 'btn btn-success', data: { event: 'upload with UTF_8' }
 
       .form-text.mb-3
         |※ ファイルはCSV形式でアップロードして下さい
