--- a/app/views/settings/shared/_layout.html.slim
+++ b/app/views/settings/shared/_layout.html.slim
@@ -3,27 +3,27 @@
     .col-3
       nav: ul.nav.nav-pills.flex-column
         li.nav-item
-          = active_link_to bot_settings_bot_path(@bot), class: 'nav-link' do
+          = active_link_to bot_settings_bot_path(@bot), class: 'nav-link', data: { event: 'bot account' } do
             = material_icon 'settings', class: 'mi-xs'
             = space
             span ボット設定
         li.nav-item
-          = active_link_to bot_settings_embed_path(@bot), class: 'nav-link' do
+          = active_link_to bot_settings_embed_path(@bot), class: 'nav-link', data: { event: 'embed code' } do
             = material_icon 'code', class: 'mi-xs'
             = space
             span 埋め込みコード
         li.nav-item
-          = active_link_to bot_settings_allowed_hosts_path(@bot), class: 'nav-link' do
+          = active_link_to bot_settings_allowed_hosts_path(@bot), class: 'nav-link', data: { event: 'allowed hosts' } do
             = material_icon 'http', class: 'mi-xs'
             = space
             span 許可ホスト
         li.nav-item
-          = active_link_to bot_settings_allowed_ip_addresses_path(@bot), class: 'nav-link' do
+          = active_link_to bot_settings_allowed_ip_addresses_path(@bot), class: 'nav-link', data: { event: 'allowed IP address' } do
             = material_icon 'language', class: 'mi-xs'
             = space
             span 許可IPアドレス
         li.nav-item
-          = active_link_to bot_settings_reset_path(@bot), class: 'nav-link' do
+          = active_link_to bot_settings_reset_path(@bot), class: 'nav-link', data: { event: 'all reset learning data' } do
             = material_icon 'layers_clear', class: 'mi-xs'
             = space
             span 学習データリセット
