--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -9,11 +9,11 @@
 
   .text-center.mb-3
     .btn-group
-      = link_to bot_tasks_path(@bot), class: "btn #{params.has_key?(:done) ? 'btn-outline-primary' : 'btn-primary'}" do
+      = link_to bot_tasks_path(@bot), class: "btn #{params.has_key?(:done) ? 'btn-outline-primary' : 'btn-primary'}", data: { event: 'click untreated' } do
         span 未対応
         = space 2
         span.badge.badge-warning= unstarted_tasks_count
-      = link_to bot_tasks_path(@bot, done: true), class: "btn #{params.has_key?(:done) ? 'btn-primary' : 'btn-outline-primary'}" do
+      = link_to bot_tasks_path(@bot, done: true), class: "btn #{params.has_key?(:done) ? 'btn-primary' : 'btn-outline-primary'}", data: { event: 'click processed' } do
         span 対応済み
         = space
         span.badge.badge-success= done_tasks_count
@@ -58,10 +58,10 @@
           - else
             span.badge.badge-warning 未対応
             = space 5
-            = link_to "対応済みにする", bot_task_path(@bot, task), mixpanel_event_data('Open new question answer', @bot).merge(method: :patch, class: "btn btn-secondary btn-sm")
+            = link_to "対応済みにする", bot_task_path(@bot, task), method: :patch, class: "btn btn-secondary btn-sm"), data: { event: 'to be processed' }
 
             = space 5
-            = link_to bot_task_path(@bot, task, redirect_to_new_question_answer_form: true), mixpanel_event_data('Open new question answer', @bot).merge(method: :patch, class: 'btn btn-info btn-sm') do
+            = link_to bot_task_path(@bot, task, redirect_to_new_question_answer_form: true), method: :patch, class: 'btn btn-info btn-sm', data: { event: 'create questions from task' }
               i.fa.fa-arrow-right
               = space
               span これを元にQ&Aを登録する
