--- a/app/views/threads/_summary.html.slim
+++ b/app/views/threads/_summary.html.slim
@@ -1,6 +1,6 @@
 .card.mb-4
   .card-block
-    .text-center.mb-3= link_to 'これ以前の発言もすべて見る', bot_thread_messages_path(bot, chat)
+    .text-center.mb-3= link_to 'これ以前の発言もすべて見る', bot_thread_messages_path(bot, chat), data: { event: 'check all chat log' }
     .row
       - chat.messages.order(created_at: :desc).limit(2).reverse.tap do |messages|
         - messages.first.tap do |message|
