--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -58,7 +58,7 @@
           - else
             span.badge.badge-warning 未対応
             = space 5
-            = link_to "対応済みにする", bot_task_path(@bot, task), method: :patch, class: "btn btn-secondary btn-sm"), data: { event: 'to be processed' }
+            = link_to "対応済みにする", bot_task_path(@bot, task), method: :patch, class: "btn btn-secondary btn-sm", data: { event: 'to be processed' }
 
             = space 5
             = link_to bot_task_path(@bot, task, redirect_to_new_question_answer_form: true), method: :patch, class: 'btn btn-info btn-sm', data: { event: 'create questions from task' }
