Add viewport meta tag

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,7 @@ html
   head
     meta charset="utf-8"
     title My-ope office - 社内問い合わせ専用AIチャットボット
+    meta content="width=device-width, initial-scale=1.0" name="viewport"
 
     link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
     link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"
