--- a/app/assets/stylesheets/app/modules/chat/form.scss
+++ b/app/assets/stylesheets/app/modules/chat/form.scss
@@ -30,6 +30,7 @@
     border: 1px solid darken($gray-lighter, 10%);
     border-radius: 3px;
     height: 38px;
+    font-size: 16px;
 
     &:focus {
       border: 1px solid $blue;
