--- a/app/views/admin/word_mappings/index.html.slim
+++ b/app/views/admin/word_mappings/index.html.slim
@@ -24,7 +24,10 @@ p 編集結果をボットに反映するためには対象のボットで再学
       - @word_mappings.each do |word_mapping|
         tr
           td = word_mapping.word
-          td = word_mapping.synonym
+          td 
+            - word_mapping.word_mapping_synonyms.each do |wms|
+              = wms.value
+              br
           td.text-right
             = link_to edit_admin_word_mapping_path(word_mapping), class: 'btn btn-secondary btn-sm', data: { event_name: 'Open edit admin word mapping', word_mapping_id: word_mapping.id } do
               = material_icon 'edit', class: 'mi-xs'
