--- a/app/views/admin/word_mappings/new.html.slim
+++ b/app/views/admin/word_mappings/new.html.slim
@@ -6,4 +6,5 @@
       span 一覧へ戻る
     h4.mb-3 システム共通同義語 新規作成
 
-    = render 'form', { resource: [:admin, @word_mapping] }
+    = render 'word_mappings/form', { resource: [:admin, @word_mapping] }
+    
