--- a/app/views/word_mappings/_form.html.slim
+++ b/app/views/word_mappings/_form.html.slim
@@ -1,16 +1,20 @@
 - data = @word_mapping.persisted? ? { event_name: 'Update word mapping', word_mapping_id: @word_mapping.id } : { event_name: 'Create word mapping' }
 .row
   .col-md-6.col-xs-12
-    = bootstrap_nested_form_for resource, data: data do |f|
+    = nested_form_for resource, data: data do |f|
       = render "shared/errors", object: @word_mapping
-
-      = f.text_field :word
-      = f.fields_for :word_mapping_synonyms do |nf|
-        = nf.label :value
-        .form-group.form-inline
-          = nf.text_field :value, hide_label: true, style: "width:529px"
-          = space
-          = nf.link_to_remove "削除", class: 'btn btn-danger'
+      
+      .form-group
+        = f.label :word
+        = f.text_field :word, class: 'form-control'
+        
+      = f.fields_for :word_mapping_synonyms, wrapper: false do |nf|
+        .form-group.fields
+          = nf.label :value
+          .input-group
+            = nf.text_field :value, hide_label: true, class:'form-control'
+            .input-group-btn
+              = nf.link_to_remove "削除", class: 'btn btn-danger'
       p
         = f.link_to_add "同義語追加", :word_mapping_synonyms, class: 'btn btn-success btn-sm'
         br
