--- a/app/views/threads/index.html.slim
+++ b/app/views/threads/index.html.slim
@@ -37,9 +37,9 @@
       label.checkbox-pill
         input.checkbox-pill__input type="checkbox" checked=params[:marked].to_bool name="marked"
         .checkbox-pill__label
-          = material_icon 'flag', class: 'text-muted mi-sm'
+          = image_tag 'icon-pin.svg', width: 20, height: 20
           = space
-          span 注意回答
+          span ピン
 
     = link_to bot_threads_path(format: :csv), class: 'btn btn-secondary btn-text-sm', data: { event: 'chat log export' } do
       = material_icon 'file_download', class: 'mi-sm text-muted'
