--- a/ansible/roles/app/templates/.env.j2
+++ b/ansible/roles/app/templates/.env.j2
@@ -1,6 +1,6 @@
 SECRET_KEY_BASE={{ secrets.secret_key_base }}
 
-DB_HOST={{ secrets.db_host }}
+DB_HOST={{ db_host }}
 DB_PASSWORD={{ secrets.db_password }}
 
 SLACK_API_TOKEN={{ secrets.slack_api_token }}
@@ -13,11 +13,11 @@ ZENDESK_URL={{ secrets.zendesk_url }}
 ZENDESK_USERNAME={{ secrets.zendesk_username }}
 ZENDESK_TOKEN={{ secrets.zendesk_token }}
 
-AWS_S3_BUCKET_NAME={{ secrets.aws_s3_bucket_name }}
+AWS_S3_BUCKET_NAME={{ aws_s3_bucket_name }}
 AWS_ACCESS_KEY_ID={{ secrets.aws_access_key_id }}
 AWS_SECRET_ACCESS_KEY={{ secrets.aws_secret_access_key }}
 
-ROLLBAR_TOKEN_SERVER={{ secrets.rollbar_token_server }}
-ROLLBAR_TOKEN_CLIENT={{ secrets.rollbar_token_client }}
+ROLLBAR_TOKEN_SERVER={{ rollbar_token_server }}
+ROLLBAR_TOKEN_CLIENT={{ rollbar_token_client }}
 
 RPC_HOST=127.0.0.1
